--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+chroma_db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -122,6 +124,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+venv2
 env/
 venv/
 ENV/
